...
      }

      enabledTextFormField = true;
      isLoading = false;
      hideLoading(context);
      notifyListeners();
      CustomSnackBar.showSuccessSnackBar(context, 'Logado com sucesso!');
      Navigator.pushReplacementNamed(context, '/home');
      return true;
    } catch (error) {
      enabledTextFormField = true;
      isLoading = false;
      hideLoading(context);
...
